platform/resources/slack/slack-events.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slack-events-ingress
  namespace: slack
spec:
  ingressClassName: ngrok
  rules:
  - host: d2554cb6bb78-7276572338102876217.ngrok-free.app
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slack-events
            port:
              number: 80
